--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -17,6 +17,7 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_provider: security.csrf.token_manager # Use form.csrf_provider instead for Symfony <2.4
+                success_handler: app.handler.user_login_redirect_handler
 
             logout:       true
             anonymous:    true
