--- a/app/config/services/forms.yml
+++ b/app/config/services/forms.yml
@@ -43,3 +43,31 @@ services:
         class: AppBundle\Form\Type\CompanyType
         tags:
         - { name: form.type, alias: company }
+
+
+    app.form.registration.invite:
+        factory_method: createNamed
+        factory_service: form.factory
+        class: Symfony\Component\Form\Form
+        arguments:
+            - app_user_registration_with_invite                        # name of the form
+            - app_user_registration_with_invite                             # alias of the form type
+            - null                             # data to bind, this is where your entity could go if you have that defined as a service
+            - { validation_groups: [Default] } # validation groups
+
+
+    app.form.type.registration_invite:
+        class: AppBundle\Form\Type\InvitationRegistrationFormType
+        tags:
+            - { name: "form.type", alias: "app_user_registration_with_invite" }
+
+    app.form.invitation:
+        class: AppBundle\Form\Type\InvitationFormType
+        arguments: ['@app.form.data_transformer.invitation']
+        tags:
+            - { name: "form.type", alias: "app_invitation_type" }
+
+    app.form.data_transformer.invitation:
+        class: AppBundle\Form\DataTransformer\InvitationToCodeTransformer
+        arguments: ['@doctrine.orm.entity_manager']
+        public: false
