--- a/composer.json
+++ b/composer.json
@@ -9,25 +9,27 @@
     },
     "require": {
         "php": ">=5.3.9",
-        "symfony/symfony": "2.7.*",
+        "symfony/symfony": "2.8.*",
         "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
-        "symfony/assetic-bundle": "~2.3",
+        "symfony/assetic-bundle": "~2.7.1",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~4.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
+        "sensio/framework-extra-bundle": "^3.0.13",
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "stof/doctrine-extensions-bundle": "@stable",
         "friendsofsymfony/comment-bundle": "@stable",
-        "hipaway-travel/mandrill-bundle": "dev-master",
+        "hipaway-travel/mandrill-bundle": "1.0.10",
         "white-october/pagerfanta-bundle": "@stable",
         "friendsofsymfony/jsrouting-bundle": "~1.5",
         "ornicar/gravatar-bundle" : "~1.0",
         "friendsofsymfony/elastica-bundle": "~3.0",
         "oneup/uploader-bundle": "~1.3",
-        "igorw/file-serve-bundle": "~1.0"
+        "igorw/file-serve-bundle": "~1.0",
+        "cvele/multitenant-bundle": "0.1-alpha",
+        "enzim/tika-wrapper": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
