--- a/app/config/services/event.yml
+++ b/app/config/services/event.yml
@@ -3,7 +3,9 @@ services:
         class: AppBundle\Event\Listener\UploadListener
         arguments:
             - @doctrine.orm.entity_manager
-            - @security.context
+            - @security.token_storage
+            - @multi_tenant.helper
+            - %kernel.root_dir%
         tags:
             - { name: kernel.event_listener, event: oneup_uploader.post_persist, method: onUpload }
 
@@ -18,21 +20,9 @@ services:
             - { name: kernel.event_listener, event: fos_comment.comment.pre_persist, method: onCommentPersist}
             - { name: kernel.event_listener, event: fos_comment.comment.pre_persist, method: onCommentPrePersist}
 
-    app.tenant_listener:
-        class: AppBundle\Event\Listener\TenantListener
-        arguments: [@doctrine.orm.entity_manager, @router, @security.context]
-        tags:
-            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
-
     gedmo.listener.timestampable:
         class: Gedmo\Timestampable\TimestampableListener
         tags:
             - { name: doctrine.event_subscriber, connection: default }
         calls:
             - [ setAnnotationReader, [ @annotation_reader ] ]
-
-    app.handler.user_login_redirect_handler:
-        class: AppBundle\Security\UserLoginRedirectHandler
-        arguments: [@doctrine.orm.entity_manager, @security.context, @router]
-        tags:
-            - { name: 'monolog.logger', channel: 'security' }
