pagination, repositories, bugfixes

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "enzim/tika-wrapper": "dev-master",
         "jms/serializer-bundle": "^1.1",
         "nelmio/cors-bundle": "^1.4",
-        "league/fractal": "^0.13.0"
+        "league/fractal": "^0.13.0",
+        "pagerfanta/pagerfanta": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
